--- a/backend/templates/backend/login.html
+++ b/backend/templates/backend/login.html
@@ -1,6 +1,6 @@
 <div style="text-align: center; margin-top: 25;">
     {% block content %}
-  <h2>Sign up</h2>
+  <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
