--- a/backend/templates/backend/update.html
+++ b/backend/templates/backend/update.html
@@ -3,6 +3,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
+<style>
+  .error{
+    color: red;
+  }
+  .success{
+    color: green;
+  }
+</style>
 <body>
     <div class="jumbotron jumbotron-fluid">
 
@@ -22,6 +30,13 @@
           {% endfor %}
           <button type="submit">Search</button>
         </form>
+        {% if messages %}
+        <ul class="messages" >
+            {% for message in messages %}
+                <p class="{{message.tags}}">{{message}}</p>
+            {% endfor %}
+        </ul>
+        {% endif %}
       </div>
 
       
